<resources>
    <string name="app_name">Pixel</string>

    <string name="set">Set</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="saveDrive">Save Cloud</string>
    <string name="share">Share</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    <string name="new_file">New</string>
    <string name="redo">Redo</string>
    <string name="paint">Paint</string>
    <string name="fill">Fill</string>
    <string name="zoom">Zoom</string>
    <string name="preview">Preview</string>
    <string name="title_activity_preview">PreviewActivity</string>
</resources>
